# openwrt23.5-imx6ull

./: .gitignore  Makefile
.github/workflows/: kernel.yml  packages.yml  tools.yml
Release/: Makefile
Release/def_config/C8888/: .config  linux5.15.config  openwrt.config
Release/def_files/C8888/test_web/: index.html
Release/product/: cs_product.sh
Release/product/def_product/: C8888_config
dl/: rtl8188eu-2023-3-15-163badb4.tar.xz  uqmi-2022-10-20-c8c9f105.tar.xz  wireless-regdb-2024.01.23.tar.xz
include/: flags.mk
package/bob/cmcumgr/: Makefile
package/bob/cmcumgr/src/: Makefile  README.md  ble_ota  ble_ota.c  cmcumgr  config.h  libgcc_s.so.1
package/bob/cs-base-files/: Makefile  cs-config.in
package/bob/custom_app/: Makefile
package/bob/custom_app/src/: Makefile  custom_app.c
package/bob/datconf/: Makefile
package/bob/datconf/src/datconf/: .gitignore  CMakeLists.txt  libdatconf.c
package/bob/datconf/src/datconf/lua/: datconf.c
package/bob/debug_cmd/: Makefile
package/bob/iot-mqtt/: Makefile
package/bob/libcjson/: Makefile
package/bob/libcommon/: Makefile
package/bob/libcsconfig/: Makefile
package/bob/libfirewall/: Makefile
package/bob/liboperations/: Makefile
package/bob/modbus/: Makefile
package/bob/mqtt/: Makefile
package/bob/mqtt/src/: Makefile  (+2 more)
package/bob/opencv-app/: Makefile
package/bob/rid_transmitter/: Makefile
package/bob/shttpd/: Makefile
package/bob/sniffer/: Makefile
package/bob/uart/: Makefile
package/bob/web/: Makefile
package/bob/webui/: Makefile
package/libs/opencv/: CMakeCache.txt  Makefile
(+360 files in other folders)
